# ai-finanzer

./: .gitignore  README.md
ai-hedge-fund/: README.md  pyproject.toml
ai-hedge-fund/src/: agents.py  test_tools.py  tools.py
stock_api/: README.md  __init__.py  pyproject.toml  stocks.db
stock_api/app/: .env.example  config.py  database.py  main.py  models.py
stock_api/app/scripts/: populate_db.py
