[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "David Carvalho"}
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.7",
    "langgraph>=0.2.56",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.2"
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0"
]
