[project]
name = "stock_api"
version = "0.1.0"
description = "Stock market data API"
requires-python = ">=3.13"
authors = [
    {name = "David Carvalho"}
]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.3",
    "yfinance>=0.2.35",
    "pandas>=2.1.3",
    "python-jose>=3.3.0",
    "pydantic-settings>=2.1.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4"
]
